# hlem-framework

./: .gitignore  Jane.cpn  README.md  cascade.py  component.py  congestion_state.py  correlation.py  extractor.py  feature_eval.py  frames.py  hl_log_flat.py  hl_log_po.py  hle_generation.py  hlem.py  linkage.py  links.py  main.py  preprocess.py  pyproject.toml  requirements.txt  tarzanJane.cpn
event_logs/: BPIC2015_complaints_2.xes  BPIC2015_complaints_5.xes
src/hlem_framework/: BPIC_2017_preprocess.py  case_participation.py  component.py  correlation.py  correlation_by_linkage.py  correlation_by_overlap.py  filtering.py  frames.py  high_level_paths.py  hl_log.py  hle_generation.py  hlem.py  hlem_with_log.py  hlem_with_overlap.py  hlem_with_paths.py  instance.py  linkage.py  main.py  overlap.py  overlap_test.py  paths_test.py  postprocess.py  preprocess.py  significance.py  steps.py  trie.py
src/hlem_framework/evaluation_bpm/: amount-2-classes.csv  evaluation_bpm23.py  process_bpic_2017.py  success-2-classes.csv  throughput-3-classes.csv
src/hlem_framework/hl_log/: hl_log.py
src/hlem_framework/hl_paths/: case_participation.py  high_level_paths.py  postprocess.py  significance.py
src/hlem_framework/hle_connection/: correlation_by_linkage.py  correlation_by_overlap.py  linkage.py
src/hlem_framework/hle_generation/: eval.py  eval_fw.py  feature_eval.py  hle_generation.py  hle_generation_fw.py  instance.py
src/hlem_framework/other/: framework_test.py  main_ICPM_2022.py  overlap_test.py
