[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hlem_framework"
version = "0.0.2"
authors = [
  { name="Bianka Bakullari", email="bianka.bakullari@pads.rwth-aachen.de" },
]
description = "A Process Mining Framework for High-Level Event Mining"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pm4py == 2.2.32", 
    "networkx", 
    "pandas", 
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/biankabakullari/hlem-framework"
"Bug Tracker" = "https://github.com/biankabakullari/hlem-framework/issues"

